Update file paths in index.html to use relative links for stylesheets, images, and scripts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professora Keli Patrícia - Educação e Conhecimento</title>
-    <link rel="stylesheet" href="styles-complete.css">
+    <link rel="stylesheet" href="./styles-complete.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -71,7 +71,7 @@
             </div>
             
             <div class="hero-image">
-                <img src="assets/Foto Keli.jpg" alt="Professora Keli Patrícia" class="profile-image">
+                <img src="./assets/Foto Keli.jpg" alt="Professora Keli Patrícia" class="profile-image">
             </div>
         </div>
     </section>
@@ -155,7 +155,7 @@
                     </div>
                     
                     <div class="about-image">
-                        <img src="assets/img.educacao.jpg" alt="Educação Infantil - Aprendizado Divertido" class="about-profile-image">
+                        <img src="./assets/img.educacao.jpg" alt="Educação Infantil - Aprendizado Divertido" class="about-profile-image">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <h4>Educação com Alegria</h4>
@@ -552,6 +552,6 @@
         </svg>
     </a>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
